# TRust

./: .env.example  .gitignore  Cargo.toml  README.md  copyInto.py  main.rs  output.rs  setup_service.sh  show.py
backups/: backup.rs  gpt.py  work.rs
backups/src_backup/: cache.rs  cache_prefetch.rs  config_management.rs  dynamic_prefetching.rs  execute_async_operation.rs  main.rs  performance_monitor.rs  performance_optimization.rs
src/: main.rs
src2/: backup_and_recovery.rs  encryption_service.rs  enhanced_storage_management.rs  hardware_integration.rs  service_manager.rs  storage_management.rs
