[package]
name = "cache_amangement_system"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
aes-gcm = "0.10.3"
sha2 = "0.10.8"
rand = "0.8.5"
flate2 = "1.0.28"
thiserror = "1.0.57"
chrono = "0.4.35"
lru = "0.12.3"
serde_json = "1.0.114"
ini = "1.3.0"
dialoguer = "0.11.0"
dotenv = "0.15.0"
hex = "0.4.3"
