[package]
name = "trust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
fluent = "0.16.0"
aes-gcm = "0.10.3"
flate2 = "1.0.19"
rand = "0.8.5"
time = "0.3.34"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
thiserror = "1.0.57"
features = "0.10.0"

[features]
default = []
systemctl = []
